chianyu fixed the webcam/everything

--- a/Frontend/static/css/index.css
+++ b/Frontend/static/css/index.css
@@ -1,3 +1,11 @@
 .main-div {
-    margin-top: 2em;
+    margin: 2em auto;
+}
+
+#video {
+    margin: auto;
+}
+
+#recorder {
+    margin: 2em auto;
 }
