added textarea + button

--- a/Frontend/templates/index.html
+++ b/Frontend/templates/index.html
@@ -61,11 +61,14 @@
 
     <button type="button" class="btn btn-primary btn-lg">First button</button>
     <button type="button" class="btn btn-primary btn-lg">Second button</button>
-    <button type="button" class="btn btn-primary btn-lg">Third button</button>
 </div>
 
 <div class="container tts">
-
+    <div class="form-group">
+        <label for="comment">Text-to-Speech:</label>
+        <textarea class="form-control" rows="5" id="comment"></textarea>
+        <button type="button" class="btn btn-primary btn-lg" onclick="">Speak!!!</button>
+    </div>
 </div>
 
 
