Added read text from textarea

--- a/Frontend/templates/index.html
+++ b/Frontend/templates/index.html
@@ -16,6 +16,11 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='index.css') }}">
 
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
+            crossorigin="anonymous"></script>
+
 </head>
 <body>
 
@@ -64,11 +69,11 @@
 </div>
 
 <div class="container tts">
-    <div class="form-group">
+    <form class="form-group" action='text2speech' method="POST">
         <label for="comment">Text-to-Speech:</label>
-        <textarea class="form-control" rows="5" id="comment"></textarea>
-        <button type="button" class="btn btn-primary btn-lg" onclick="">Speak!!!</button>
-    </div>
+        <input type="text" name="text" id="comment" class="form-control">
+        <input type="submit" value="Speak" class="btn btn-primary btn-lg">
+    </form>
 </div>
 
 
