added audio player placeholder

--- a/Frontend/templates/index.html
+++ b/Frontend/templates/index.html
@@ -67,8 +67,15 @@
     <div class="form-group">
         <label for="comment">Text-to-Speech:</label>
         <textarea class="form-control" rows="5" id="comment"></textarea>
-        <button type="button" class="btn btn-primary btn-lg" onclick="">Speak!!!</button>
+        <button type="button" class="btn btn-primary btn-lg speak">Speak!!!</button>
     </div>
+</div>
+
+<div class="container audio">
+    <audio controls>
+        <source src="horse.mp3" type="audio/mpeg">
+        Your browser does not support the audio tag.
+    </audio>
 </div>
 
 
