--- a/Frontend/templates/home.html
+++ b/Frontend/templates/home.html
@@ -72,7 +72,7 @@
     <form class="form-group" action='text2speech' method="POST">
         <label for="comment">Text-to-Speech:</label>
         <input type="text" name="text" id="comment" class="form-control">
-        <input type="submit" value="Speak" class="btn btn-primary btn-lg">
+        <input type="submit" value="Speak" class="btn btn-primary btn-lg speak">
     </form>
 </div>
 
