--- a/Frontend/static/css/home.css
+++ b/Frontend/static/css/home.css
@@ -1,5 +1,13 @@
+nav {
+    height: 5em;
+}
+
 .main-div {
     margin: 2em auto;
+}
+
+#webcam-title {
+    margin-bottom: 0.9em;
 }
 
 #video {
@@ -10,10 +18,14 @@
     margin: 2em auto;
 }
 
-input.speak {
-    margin: 1em 0 !important;
+#recorder > button {
+    margin-right: 1em;
 }
 
-.audio {
-    margin: 2em auto;
+input.speak {
+    margin: 1em 0;
+}
+
+#tts {
+    font-size: 1.5em;
 }
