--- a/Frontend/templates/home.html
+++ b/Frontend/templates/home.html
@@ -69,7 +69,7 @@
 </div>
 
 <div class="container tts">
-    <form class="form-group" action='text2speech' method="POST">
+    <form class="form-group" action='' method="POST">
         <label for="comment">Text-to-Speech:</label>
         <input type="text" name="text" id="comment" class="form-control">
         <input type="submit" value="Speak" class="btn btn-primary btn-lg speak">
