--- a/Frontend/templates/home.html
+++ b/Frontend/templates/home.html
@@ -26,25 +26,25 @@
 
 <!--Navbar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="#">Eclipse et Chill</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarColor01">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
-      </li>
+      <!--<li class="nav-item active">-->
+        <!--<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>-->
+      <!--</li>-->
+      <!--<li class="nav-item">-->
+        <!--<a class="nav-link" href="#">Features</a>-->
+      <!--</li>-->
+      <!--<li class="nav-item">-->
+        <!--<a class="nav-link" href="#">Pricing</a>-->
+      <!--</li>-->
+      <!--<li class="nav-item">-->
+        <!--<a class="nav-link" href="#">About</a>-->
+      <!--</li>-->
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="text" placeholder="Search">
@@ -58,30 +58,25 @@
 
     <img id="video" src="{{ url_for('video_viewer') }}">
     <div id="recorder">
-        <button id="record">Record</button>
-        <button id="stop">Stop</button>
+        <button type="button" class="btn btn-primary btn-lg" id="snapshot">Take a Snapshot</button>
+        <button type="button" class="btn btn-primary btn-lg" id="record">Record</button>
+        <button type="button" class="btn btn-primary btn-lg" id="stop">Stop</button>
         <a id="download"></a>
-        <script type="text/javascript" src="{{ url_for('static', filename='recorder.js') }}"></script>
+        <!--<script type="text/javascript" src="{{ url_for('static', filename='recorder.js') }}"></script>-->
     </div>
 
-    <button type="button" class="btn btn-primary btn-lg">First button</button>
-    <button type="button" class="btn btn-primary btn-lg">Second button</button>
 </div>
 
 <div class="container tts">
-    <form class="form-group" action='' method="POST">
+    <form class="form-group" action="" method="POST">
         <label for="comment">Text-to-Speech:</label>
         <input type="text" name="text" id="comment" class="form-control">
         <input type="submit" value="Speak" class="btn btn-primary btn-lg speak">
     </form>
 </div>
 
-<div class="container audio">
-    <audio controls>
-        <source src="horse.mp3" type="audio/mpeg">
-        Your browser does not support the audio tag.
-    </audio>
-</div>
+
+<script type="text/javascript" src="{{ url_for('static', filename='recorder.js') }}"></script>
 
 
 </body>
