--- a/Frontend/templates/home.html
+++ b/Frontend/templates/home.html
@@ -59,9 +59,9 @@
     <img id="video" src="{{ url_for('video_viewer') }}">
     <div id="recorder">
         <button type="button" class="btn btn-primary btn-lg" id="snapshot">Take a Snapshot</button>
-        <button type="button" class="btn btn-primary btn-lg" id="record">Record</button>
-        <button type="button" class="btn btn-primary btn-lg" id="stop">Stop</button>
-        <a id="download"></a>
+        <!--<button type="button" class="btn btn-primary btn-lg" id="record">Record</button>-->
+        <!--<button type="button" class="btn btn-primary btn-lg" id="stop">Stop</button>-->
+        <!--<a id="download"></a>-->
         <!--<script type="text/javascript" src="{{ url_for('static', filename='recorder.js') }}"></script>-->
     </div>
 
